# owui_connector

./: README.md  pyproject.toml
.trunk/: trunk.yaml
owui_connector/: __init__.py  api_requests.py  connector.py
owui_connector/models/: __init__.py  message_roles.py  ollama.py  user.py
owui_connector/models/chat/: __init__.py  chat.py  completed.py  model_response.py  user_message.py
tests/: __main__.py
